--- a/index.html
+++ b/index.html
@@ -15,39 +15,39 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Lydia</span>
+        <span id="name">Yana</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">真是特别的一天</p>
     </div>
     <div class="three">
-      <p>It's your birthday!!! :D</p>
+      <p>今天是你的生日（农历）!</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox">给你发一段微信祝福</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
-      <p class="idea-3">I realised, I wanted to do something
-        <strong>special</strong>.</p>
-      <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special
+      <p class="idea-1">本来想这么做</p>
+      <p class="idea-2">但是我没有</p>
+      <p class="idea-3">我发现，我需要做点
+        <strong>特别的</strong>.</p>
+      <p class="idea-4">因为</p>
+      <p class="idea-5">你很特别
         <span>:)</span>
       </p>
       <p class="idea-6">
-        <span>S</span>
-        <span>O</span>
+        <span>所</span>
+        <span>以</span>
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/yana.jpg" alt="" class="lydia-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h3 class="wish-hbd">生日快乐!</h3>
+        <h5 id="wishText">啦啦啦啦啦</h5>
       </div>
     </div>
     <div class="seven">
@@ -117,8 +117,7 @@
       </svg>
     </div>
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p id="replay">点击再来一遍！</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
