--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">给你发一段微信祝福</p>
+        <p class="hbd-chatbox">给你发一段微信祝福 or 买一些礼物给你</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
